--- a/index.htm
+++ b/index.htm
@@ -49,7 +49,7 @@
 	<div class="container-lg ">
 	<div class="row justify-content-between">
 	  <div class="col-sm-3">
-		  <img src="./img/catalina.png" class="img-fluid" />
+		  <img src="./catalina.png" class="img-fluid" />
 		  <hr/>
 		  
 			<div><a href="https://scholar.google.com/citations?user=xnoRnUUAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> </div>
