--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
 
 	</style>
 
-    <title>Catalina Franco</title>
+    <title><b>Catalina Franco</b></title>
   </head>
   <body>
 	<!-- Google Tag Manager (noscript) -->
@@ -58,7 +58,7 @@
 	<div class = "col-sm-8">
 		<div>
 			<h4>Welcome!</h4>
-			<p>I am a researcher at the Department of Economics at <a href="https://www.aalto.fi/en/department-of-economics" target="_blank" rel="noopener">Aalto University</a> in Helsinki, Finland. Previously, I completed my PhD at <a href="https://www.nhh.no/en/research-centres/fair/" target="_blank" rel="noopener">FAIR</a> in NHH Norwegian School of Economics. My research is in <b>behavioral economics</b> and the <b>economics of education</b>, with a focus on how and when group identity affects economic decisions. I study these questions through the use of experimental methods.</p>
+			<p>I am a researcher at the Center for Applied Research (<a href="https://www.nhh.no/en/research-centres/fair/" target="_blank" rel="noopener">SNF</a>) and the Center of Excellence <a href="https://www.nhh.no/en/research-centres/fair/" target="_blank" rel="noopener">FAIR</a> at NHH Norwegian Schoolof Economics in Bergen, Norway. I completed my PhD at the University of Michigan. My two main lines of research focus on: (1) the intersection between high-stakes exam performance and gender differences in college major choices and exam-related stress levels, and (2) the role of generative AI in student learning and gender gaps in adoption that may affect labor market outcomes.</p>
 			<p><b>Email:</b> catalina.franco@snf.no</p>
 			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here</a></p>
 		</div>
