--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
 
 	</style>
 
-    <title><b>Catalina Franco</b></title>
+    <title>Catalina Franco</title>
   </head>
   <body>
 	<!-- Google Tag Manager (noscript) -->
@@ -60,10 +60,29 @@
 			<h4>Welcome!</h4>
 			<p>I am a researcher at the Center for Applied Research (<a href="https://www.nhh.no/en/research-centres/fair/" target="_blank" rel="noopener">SNF</a>) and the Center of Excellence <a href="https://www.nhh.no/en/research-centres/fair/" target="_blank" rel="noopener">FAIR</a> at NHH Norwegian Schoolof Economics in Bergen, Norway. I completed my PhD at the University of Michigan. My two main lines of research focus on: (1) the intersection between high-stakes exam performance and gender differences in college major choices and exam-related stress levels, and (2) the role of generative AI in student learning and gender gaps in adoption that may affect labor market outcomes.</p>
 			<p><b>Email:</b> catalina.franco@snf.no</p>
-			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here</a></p>
+			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here.</a></p>
 		</div>
 		<br/>
 		<div>
+			<h4>Publications</h4>
+			<div>
+				<p><b>Does Re-Imprisonment for Technical Violations Prevent Crime?</b>
+				<br><i>(with  David Harding, Jeffrey Morenoff, and Shawn D. Bushway) - Previously circulated with the title "Failing to Follow the Rules: Can Imprisonment Lead to More Imprisonment Without More Actual Crime?"</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
+					<a href="https://openaccess.nhh.no/nhh-xmlui/handle/11250/2984383" target=_blank>Paper</a> 
+				</p>
+				<div class="collapse abs-padding" id="abs4">We find that individuals involved in low-level crime who receive prison sentences are more likely to be re-imprisoned for technical violations during their post-release supervision, rather than for new offenses, compared to those who receive non-prison sentences. We identify the extent and cost of this incapacitation effect among individuals with similar criminal histories using exogenous variation in sentence type from discontinuities in Michigan Sentencing Guidelines. Higher re-imprisonment adds 15\% more prison days to the original sentence while only low-level crimes appear to be averted. These results suggest that re-imprisonment for technical parole violations does not prevent serious crime.</div>
+
+			<div>
+				<p><b>Will Artificial Intelligence Get in the Way of Achieving Gender Equality?</b>
+				<br><i>(with Daniel Carvajal and Siri Isaksson)</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4759218" target=_blank>Paper</a> 
+				</p>
+				<div class="collapse abs-padding" id="abs4">We conduct two surveys with preregistered experiments to examine gender differences in generative AI adoption and potential labor market consequences. First, we document a substantial gender gap in AI adoption among students at a top business school in Norway, with female students, particularly top students, opting out of AI use. Second, a survey of managers shows that acquiring AI skills would significantly enhance job prospects for top female students currently avoiding AI. Finally, we provide causal evidence on policy tools to close the gender gap in AI adoption. Our findings show that generative AI could widen existing gender gaps in the labor market, but appropriate policies can help prevent this outcome.</div>
+
+			<div>
+
 			<h4>Working papers</h4>
 			<div>
 				<p><b>Will Artificial Intelligence Get in the Way of Achieving Gender Equality?</b>
