--- a/index.htm
+++ b/index.htm
@@ -57,18 +57,35 @@
 		  <hr/>
 		  
 			<div><a href="https://scholar.google.com/citations?user=xnoRnUUAAAAJ" target="_blank">Google Scholar</a> </div>
-			<div><a href="https://twitter.com/carvajald9" target="_blank">Twitter</a></div>
+			
 			<br/>
 	</div>
 	<div class = "col-sm-8">
 		<div>
-			<h4>About me</h4>
-			<p>I am a Postdoctoral Researcher at the Department of Economics at <a href="https://www.aalto.fi/en/department-of-economics" target="_blank" rel="noopener">Aalto University</a> in Helsinki, Finland. Previously, I completed my PhD at <a href="https://www.nhh.no/en/research-centres/fair/" target="_blank" rel="noopener">FAIR</a> in NHH Norwegian School of Economics. My research is in <b>behavioral economics</b> and the <b>economics of education</b>, with a focus on how and when group identity affects economic decisions. I study these questions through the use of experimental methods.</p>
-			<p><b>Email:</b> daniel.carvajal@aalto.fi</p>
-			<p> You can find my <b>CV</b> <a href="./docs/CV_DC_0824.pdf" target=_blank>here</a></p>
+			<h4>Welcome!</h4>
+			<p>I am a researcher at the center for Applied Research (<a href="https://www.aalto.fi/en/department-of-economics" target="_blank" rel="noopener">SNF</a>) and <a href="https://www.aalto.fi/en/department-of-economics" target="_blank" rel="noopener">FAIR</a> at NHH Norwegian School of Economics. I completed my PhD at the University of Michigan. My research is in <b>gender economics</b> and the <b>economics of education</b>.</p>
+			<p><b>Email:</b> catalina.franco@snf.no</p>
+			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here</a> (Updated October 2024)</p>
 		</div>
 		<br/>
 		<div>
+
+			<h4>Publications</h4>
+			<div>
+				<p><b>Does Re-Imprisonment for Technical Violations Prevent Crime?</b>
+				<br>(with David Harding, Jeffrey Morenoff, and Shawn D. Bushway)
+				<br><i>Journal of Human Resouces</i>, forthcoming</p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
+					<a href="./docs/RD_paper_website.pdf">Paper</a> 
+				</p>
+				<div class="collapse abs-padding" id="abs4">We find that individuals involved in low-level crime who receive prison sentences are more likely to be re-imprisoned for technical violations during their post-release supervision, rather than for new offenses, compared to those who receive non-prison sentences. We identify the extent and cost of this incapacitation effect among individuals with similar criminal histories using exogenous variation in sentence type from discontinuities in Michigan Sentencing Guidelines. Higher re-imprisonment adds 15\% more prison days to the original sentence while only low-level crimes appear to be averted. These results suggest that re-imprisonment for technical parole violations does not prevent serious crime.</div>
+			<div>
+				<p><b>Exposure to diversity, social proximity and ingroup bias</b> </p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">As society becomes increasingly diverse, will changes in an individual's exposure to diversity influence their interactions with others? I study prosocial behavior in a large-scale U.S. sample, where participants are exogenously exposed to social contexts with varying levels of nationality diversity. I find that diverse contexts amplify participants' ingroup bias&ndash;the tendency to favor one's own group&ndash;driven by increased allocations towards fellow nationals and decreased allocations to foreigners, relative to giving in homogeneous contexts where such bias is not present. A change in perceptions of social proximity corresponds to a driver of the effect of diversity in allocations. The findings are consistent across subgroups of the population, which suggests that the study identifies a general heuristic through which individuals identify with groups, where social context&ndash;and not only individual characteristics&ndash;is key for the emergence of ingroup bias. <br/></div>
+
 			<h4>Working papers</h4>
 			<div>
 				<p><b>Will Artificial Intelligence get in the way of achieving gender equality?</b>
@@ -83,6 +100,8 @@
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs5">As society becomes increasingly diverse, will changes in an individual's exposure to diversity influence their interactions with others? I study prosocial behavior in a large-scale U.S. sample, where participants are exogenously exposed to social contexts with varying levels of nationality diversity. I find that diverse contexts amplify participants' ingroup bias&ndash;the tendency to favor one's own group&ndash;driven by increased allocations towards fellow nationals and decreased allocations to foreigners, relative to giving in homogeneous contexts where such bias is not present. A change in perceptions of social proximity corresponds to a driver of the effect of diversity in allocations. The findings are consistent across subgroups of the population, which suggests that the study identifies a general heuristic through which individuals identify with groups, where social context&ndash;and not only individual characteristics&ndash;is key for the emergence of ingroup bias. <br/></div>
+
+
 			</div>
 			<br/>
 			<h4>Work in progress</h4>
