--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@
 				<br>(with David Harding, Jeffrey Morenoff, and Shawn D. Bushway)
 				<br><i>Journal of Human Resouces</i>, forthcoming</p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
-					<a href="./docs/RD_paper_website.pdf">Paper</a> 
+					<a href="./docs/RD_paper_website.pdf" target="blank">Paper</a> 
 				</p>
 				<div class="collapse abs-padding" id="abs4">We find that individuals involved in low-level crime who receive prison sentences are more likely to be re-imprisoned for technical violations during their post-release supervision, rather than for new offenses, compared to those who receive non-prison sentences. We identify the extent and cost of this incapacitation effect among individuals with similar criminal histories using exogenous variation in sentence type from discontinuities in Michigan Sentencing Guidelines. Higher re-imprisonment adds 15\% more prison days to the original sentence while only low-level crimes appear to be averted. These results suggest that re-imprisonment for technical parole violations does not prevent serious crime.</div>
 			<div>
