--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
 	<div class = "col-sm-8">
 		<div>
 			<h4>Welcome!</h4>
-			<p>I am a researcher at the center for Applied Research (<a href="https://www.aalto.fi/en/department-of-economics" target="_blank" rel="noopener">SNF</a>) and <a href="https://www.aalto.fi/en/department-of-economics" target="_blank" rel="noopener">FAIR</a> at NHH Norwegian School of Economics. I completed my PhD at the University of Michigan. My research is in <b>gender economics</b> and the <b>economics of education</b>.</p>
+			<p>I am a researcher at the center for Applied Research (<a href="https://snf.no/forskningsgrupper/fair-insight-team/" target="_blank" rel="noopener">SNF</a>) and <a href="https://www.nhh.no/en/research-centres/fair/about/" target="_blank" rel="noopener">FAIR</a> at NHH Norwegian School of Economics. I completed my PhD at the University of Michigan. My research is in <b>gender economics</b> and the <b>economics of education</b>.</p>
 			<p><b>Email:</b> catalina.franco@snf.no</p>
 			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here</a> (Updated October 2024)</p>
 		</div>
@@ -74,7 +74,7 @@
 			<div>
 				<p><b>Does Re-Imprisonment for Technical Violations Prevent Crime?</b>
 				<br>(with David Harding, Jeffrey Morenoff, and Shawn D. Bushway)
-				<br><i>Journal of Human Resouces</i>, forthcoming</p>
+				<br><i>Journal of Human Resources</i>, forthcoming</p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
 					<a href="./docs/RD_paper_website.pdf" target=_blank>Paper</a> 
 				</p>
