--- a/index.htm
+++ b/index.htm
@@ -91,24 +91,81 @@
 			<h4>Working papers</h4>
 			<div>
 				<p><b>Will Artificial Intelligence get in the way of achieving gender equality?</b>
-				<br><i>(with Catalina Franco and Siri Isaksson)</i></p>
+				<br><i>(with Daniel Carvajal and Siri Isaksson)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4759218" target=_blank>Paper</a> 
 				</p>
-				<div class="collapse abs-padding" id="abs4">The growing importance of AI in the labor market makes it crucial to understand how it may influence pre-existing inequalities. We conduct two survey experiments to examine gender differences in generative AI adoption and potential labor market consequences. First, we document a substantial gender gap among students at a top business school in Norway, with female students, particularly top students, opting out of AI use. Second, a survey of managers shows that acquiring AI skills would significantly enhance job prospects for top female students currently opting out. Finally, we provide causal evidence on policy tools to close this gap. Our findings show that generative AI could widen existing gender gaps in the labor market, but appropriate encouragement and policies can prevent this outcome.</div>
+				<div class="collapse abs-padding" id="abs4">We conduct two surveys with preregistered experiments to examine gender differences in generative AI adoption and potential labor market consequences. First, we document a substantial gender gap in AI adoption among students at a top business school in Norway, with female students, particularly top students, opting out of AI use. Second, a survey of managers shows that acquiring AI skills would significantly enhance job prospects for top female students currently avoiding AI. Finally, we provide causal evidence on policy tools to close the gender gap in AI adoption. Our findings show that generative AI could widen existing gender gaps in the labor market, but appropriate policies can help prevent this outcome.</div>
 			<div>
-				<p><b>Exposure to diversity, social proximity and ingroup bias</b> </p>
+				<p><b>Innocuous Exam Features? The Impact of Answer Placement on High-Stakes Test Performance and College Admissions</b>
+				<br><i>(with Erika Povea)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
 				</p>
-			<div class="collapse abs-padding" id="abs5">As society becomes increasingly diverse, will changes in an individual's exposure to diversity influence their interactions with others? I study prosocial behavior in a large-scale U.S. sample, where participants are exogenously exposed to social contexts with varying levels of nationality diversity. I find that diverse contexts amplify participants' ingroup bias&ndash;the tendency to favor one's own group&ndash;driven by increased allocations towards fellow nationals and decreased allocations to foreigners, relative to giving in homogeneous contexts where such bias is not present. A change in perceptions of social proximity corresponds to a driver of the effect of diversity in allocations. The findings are consistent across subgroups of the population, which suggests that the study identifies a general heuristic through which individuals identify with groups, where social context&ndash;and not only individual characteristics&ndash;is key for the emergence of ingroup bias. <br/></div>
+			<div class="collapse abs-padding" id="abs5">We exploit randomness in college entrance exams in Colombia to study how the placement of answers impacts multiple choice test results and access to college. Using administrative data, we find that: first, applicants are 5% less likely to answer correctly when the correct answer is the last in the choice set (option D). And, second, that one SD higher share of correct answers in D in the math section reduces applicants’ overall performance and their preferred major admission rate by 3%. Considering lifelong college access implications, we show how seemingly innocuous exam features disproportionately affect unlucky test takers. <br/></div>
 
+			<div>
+				<p><b>Bridging the Gender Gap in Exam Performance through Nudges and Stress Management</b>
+				<br><i>(with Marcela Gomez-Ruiz)</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">Why women underperform relative to men in high-stakes exams while excelling under lower stakes remains a puzzle. Previous research suggests differential responses to pressure as an explanation. We evaluate the impact of a unique intervention assigning STEM program applicants in Uruguay to in-exam stress management exercises involving positive stress interpretation and a brief meditation. Relative to control women, treated women omit fewer questions, resulting in a 0.13 SD boost in overall performance. Consequently, the admissions gender gap closes and 10\% more women are admitted. The main insight is that omitting fewer questions is key for reducing gender gaps in performance. <br/></div>
+	
+			<div>
+				<p><b>Strategic Decisions Have "Major" Consequences: Gender Differences in College Major Choices</b>
+				<br><i>(with Amelia Hawkins)</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">Does the way students navigate college admissions processes contribute to gender gaps in major choices? We study the major choices of applicants to Colombia's largest public university who marginally miss their intended major’s cutoff. We find that women scoring just below the cutoff submit additional, less-preferred majors compared to similar men intending the same major. While women enroll sooner into these less-preferred majors, men instead reapply later for admission. As a result, a gender gap in potential earnings of 4.5% emerges at the cutoff. Our findings highlight that differential responses to just failing can influence enrolled majors and earnings potential. <br/></div>
+
+			<div>
+				<p><b>Gender Differences in Exam Performance at the Top</b>
+				<br><i>(with Ingvild Skarpeid)</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">Previous literature documents gender differences in high-stakes exam performance. It has been suggested that these differences may be partly due to women "choking" under pressure. However, no causal evidence conclusively shows that choking under pressure causes underperformance in high-stakes settings, or that women are more affected than men. To address this gap, we designed an experiment to test whether women face a gender-specific penalty when performing under pressure. Over 2,600 online participants completed two IQ tests. In the first, stakes were constant across all groups. In the second test, we varied pressure levels by introducing a performance cutoff and, in one treatment group, significantly increasing the stakes. We also conducted a survey providing novel and detailed information on typical earnings on the Prolific platform, confirming that the increase in incentives was substantial compared to standard rewards for these online workers. Our results show that increasing pressure does not significantly affect overall performance, nor does it differentially impact women. However, an exploratory analysis reveals that the large incentives reduce performance among female test takers who may be ``at risk" of choking: women who performed well in the first test and accurately believed so. Our findings suggest that understanding how high-performing women respond to pressure may be a key step in closing the gender gap in examinations. <br/></div>
+
+			<div>
+				<p><b>Stress, Exam Performance and Gender</b>
+				<br><i>(with Ingvild Skarpeid and students in my course "Stress and mental health in education")</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">This paper examines the hypothesized relationship between performance and stress, commonly known as the Yerkes-Dodson Law (YDL). Analyzing exam performance and post-exam survey responses from 35,000 university applicants taking a high-stakes college entrance exam in Colombia, we find empirical support for the inverted-U pattern posited by the YDL. Our results indicate that female applicants are significantly more likely to experience high, sub-optimal levels of stress compared to male applicants. We estimate that high-stress levels result in a performance penalty of 5\% of a standard deviation. Additionally, our results suggest that, in high-stakes settings, interventions aimed at reducing the importance students place on the outcome of the exam may be more effective for optimizing stress than alternatives like stress reappraisal or controlling worry. <br/></div>
+
+			<div>
+				<p><b>Willingness to Pay for Formal Job Attributes: A Discrete Choice Experiment in Colombian Mom-and-Dad Stores</b>
+				<br><i>(with Amalia Rodríguez-Valencia)</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">Informal workers are vulnerable to economic shocks since their jobs lack health and retirement benefits. Are workers informal because they do not value these benefits offered by formal jobs? Using a discrete choice experiment on a random sample of 2,900 "mom-and-dad" store owners and employees in Colombia, we estimate their willingness to pay (WTP) for formal employment benefits, namely health and retirement plans. We find that on average workers are willing to forego up to 28% and 37% of their earnings to access formal health and retirement benefits, respectively. In contrast to previous research, which suggests that workers’ low WTP induced them to become informal under expansions of free or subsidized health insurance programs, our findings suggest that workers value these benefits and point to inflexibilities in the labor market and the rules governing the health and retirement systems as more important hurdles for workers to become formal. <br/></div>
+
+							<div>
+				<p><b>How does Relative Performance Feedback Affect Beliefs and Academic Decisions? Evidence from a Field Experiment</b></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">Previous literature documents gender differences in high-stakes exam performance. It has been suggested that these differences may be partly due to women "choking" under pressure. However, no causal evidence conclusively shows that choking under pressure causes underperformance in high-stakes settings, or that women are more affected than men. To address this gap, we designed an experiment to test whether women face a gender-specific penalty when performing under pressure. Over 2,600 online participants completed two IQ tests. In the first, stakes were constant across all groups. In the second test, we varied pressure levels by introducing a performance cutoff and, in one treatment group, significantly increasing the stakes. We also conducted a survey providing novel and detailed information on typical earnings on the Prolific platform, confirming that the increase in incentives was substantial compared to standard rewards for these online workers. Our results show that increasing pressure does not significantly affect overall performance, nor does it differentially impact women. However, an exploratory analysis reveals that the large incentives reduce performance among female test takers who may be ``at risk" of choking: women who performed well in the first test and accurately believed so. Our findings suggest that understanding how high-performing women respond to pressure may be a key step in closing the gender gap in examinations. <br/></div>
+
+			<div>
+				<p><b>Stress, The Value of a Signal: Information Processing among Students Outside the Lab </b></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
+					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+				</p>
+			<div class="collapse abs-padding" id="abs5">This paper examines the hypothesized relationship between performance and stress, commonly known as the Yerkes-Dodson Law (YDL). Analyzing exam performance and post-exam survey responses from 35,000 university applicants taking a high-stakes college entrance exam in Colombia, we find empirical support for the inverted-U pattern posited by the YDL. Our results indicate that female applicants are significantly more likely to experience high, sub-optimal levels of stress compared to male applicants. We estimate that high-stress levels result in a performance penalty of 5\% of a standard deviation. Additionally, our results suggest that, in high-stakes settings, interventions aimed at reducing the importance students place on the outcome of the exam may be more effective for optimizing stress than alternatives like stress reappraisal or controlling worry. <br/></div>
+
+				
 
 			</div>
 			<br/>
 			<h4>Work in progress</h4>
 			<div>
-			<p><b>The role of a majority-minority status and ingroup affinity in shaping social preferences</b></p>
+			<p><b>Gender Differences in Recognition of Depression and Seeking Help</b>
+				<br><i>(with Sara Abrahamsson and Akshay Moorthy)</i></p>
 			</div>
 		</div>
 
