--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,9 @@
 	<div class = "col-sm-8">
 		<div>
 			<h4>Welcome!</h4>
-			<p>I am a researcher at the center for Applied Research (<a href="https://snf.no/forskningsgrupper/fair-insight-team/" target="_blank" rel="noopener">SNF</a>) and <a href="https://www.nhh.no/en/research-centres/fair/about/" target="_blank" rel="noopener">FAIR</a> at NHH Norwegian School of Economics. I completed my PhD at the University of Michigan. My research is in <b>gender economics</b> and the <b>economics of education</b>.</p>
+			<p>I am a researcher at the center for Applied Research (<a href="https://snf.no/forskningsgrupper/fair-insight-team/" target="_blank" rel="noopener">SNF</a>) at NHH Norwegian School of Economics. I am affiliated with the Center of Excellence <a href="https://www.nhh.no/en/research-centres/fair/about/" target="_blank" rel="noopener">FAIR</a> and the Development Learning Lab (<a href="https://www.devlearnlab.no/" target="_blank" rel="noopener">DLL</a>). I completed my PhD at the University of Michigan. My research is in <b>gender economics</b> and the <b>economics of education</b>.</p>
+
+			<p> My research focuses on education challenges in industrialized and developing countries, often using behavioral economics as an approach. I use both administrative data and design my own randomized studies. Currently, my focus is on studying the implications of generative AI on education, as well as the role of stress on gender differences in high-stakes exam performance. </p>
 			<p><b>Email:</b> catalina.franco@snf.no</p>
 			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here</a> (Updated October 2024)</p>
 		</div>
@@ -121,18 +123,18 @@
 			<div class="collapse abs-padding" id="abs5">Does the way students navigate college admissions processes contribute to gender gaps in major choices? We study the major choices of applicants to Colombia's largest public university who marginally miss their intended major’s cutoff. We find that women scoring just below the cutoff submit additional, less-preferred majors compared to similar men intending the same major. While women enroll sooner into these less-preferred majors, men instead reapply later for admission. As a result, a gender gap in potential earnings of 4.5% emerges at the cutoff. Our findings highlight that differential responses to just failing can influence enrolled majors and earnings potential. <br/></div>
 
 			<div>
-				<p><b>Gender Differences in Exam Performance at the Top</b>
+				<p><b>Gender Differences at the Top: Incentives, Performance and Choking under Pressure</b>
 				<br><i>(with Ingvild Skarpeid)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
 				</p>
-			<div class="collapse abs-padding" id="abs5">Previous literature documents gender differences in high-stakes exam performance. It has been suggested that these differences may be partly due to women "choking" under pressure. However, no causal evidence conclusively shows that choking under pressure causes underperformance in high-stakes settings, or that women are more affected than men. To address this gap, we designed an experiment to test whether women face a gender-specific penalty when performing under pressure. Over 2,600 online participants completed two IQ tests. In the first, stakes were constant across all groups. In the second test, we varied pressure levels by introducing a performance cutoff and, in one treatment group, significantly increasing the stakes. We also conducted a survey providing novel and detailed information on typical earnings on the Prolific platform, confirming that the increase in incentives was substantial compared to standard rewards for these online workers. Our results show that increasing pressure does not significantly affect overall performance, nor does it differentially impact women. However, an exploratory analysis reveals that the large incentives reduce performance among female test takers who may be ``at risk" of choking: women who performed well in the first test and accurately believed so. Our findings suggest that understanding how high-performing women respond to pressure may be a key step in closing the gender gap in examinations. <br/></div>
+			<div class="collapse abs-padding" id="abs5">Are women more likely than men to choke under pressure? We provide novel experimental evidence on this question from a large-scale study of online workers taking part in two IQ tests. We manipulate the level of pressure by varying the performance requirement or the size of the incentives. We complement the experimental analysis with survey evidence that help us confirm that the increase in incentives is substantial compared to standard rewards for these online workers. Our results show that increasing pressure does not significantly affect overall performance, nor does it differentially impact women. However, an exploratory analysis reveals that large incentives reduce performance among female test takers who may be ``at risk'' of choking: women who performed close to the performance requirement in the first test and had correct beliefs about being a high performer. Our findings suggest that understanding how high-performing women respond to pressure may be a key step in closing the gender gap in domains with high levels of pressure such as high-stakes examinations. <br/></div>
 
 			<div>
 				<p><b>Stress, Exam Performance and Gender</b>
 				<br><i>(with Ingvild Skarpeid and students in my course "Stress and mental health in education")</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
-					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+					<a >Draft available upon request</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs5">This paper examines the hypothesized relationship between performance and stress, commonly known as the Yerkes-Dodson Law (YDL). Analyzing exam performance and post-exam survey responses from 35,000 university applicants taking a high-stakes college entrance exam in Colombia, we find empirical support for the inverted-U pattern posited by the YDL. Our results indicate that female applicants are significantly more likely to experience high, sub-optimal levels of stress compared to male applicants. We estimate that high-stress levels result in a performance penalty of 5\% of a standard deviation. Additionally, our results suggest that, in high-stakes settings, interventions aimed at reducing the importance students place on the outcome of the exam may be more effective for optimizing stress than alternatives like stress reappraisal or controlling worry. <br/></div>
 
@@ -166,6 +168,14 @@
 			<div>
 			<p><b>Gender Differences in Recognition of Depression and Seeking Help</b>
 				<br><i>(with Sara Abrahamsson and Akshay Moorthy)</i></p>
+
+				<div>
+			<p><b>Encouraging Women Leadership: Evidence from Village Savings and Loans Associations in Uganda</b>
+				<br><i>(with Kjetil Bjorvatn, Shyamal Chowdhury, Danila Serra and Munshi Sulaiman)</i></p>
+
+				<div>
+			<p><b>Getting Employers to Hire Workers in Inclusion Policies through Nudges and Motivation</b>
+				<br><i>(with Kjetil Bjorvatn, Mathias Ekström and Ranveig Falch)</i></p>
 			</div>
 		</div>
 
