--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
 	<div class = "col-sm-8">
 		<div>
 			<h4>Welcome!</h4>
-			<p>I am a researcher at the center for Applied Research (<a href="https://snf.no/forskningsgrupper/fair-insight-team/" target="_blank" rel="noopener">SNF</a>) at NHH Norwegian School of Economics. I am affiliated with the Center of Excellence <a href="https://www.nhh.no/en/research-centres/fair/about/" target="_blank" rel="noopener">FAIR</a> and the Development Learning Lab (<a href="https://www.devlearnlab.no/" target="_blank" rel="noopener">DLL</a>). I completed my PhD at the University of Michigan. My research is in <b>gender economics</b> and the <b>economics of education</b>.</p>
+			<p>I am a researcher at the center for Applied Research (<a href="https://snf.no/forskningsgrupper/fair-insight-team/" target="_blank" rel="noopener">SNF</a>) at NHH Norwegian School of Economics. I am affiliated with the Center of Excellence <a href="https://www.nhh.no/en/research-centres/fair/about/" target="_blank" rel="noopener">FAIR</a> and the Development Learning Lab (<a href="https://www.devlearnlab.no/" target="_blank" rel="noopener">DLL</a>). I completed my PhD at the University of Michigan.</p>
 
 			<p> My research focuses on education challenges in industrialized and developing countries, often using behavioral economics as an approach. I use both administrative data and design my own randomized studies. Currently, my focus is on studying the implications of generative AI on education, as well as the role of stress on gender differences in high-stakes exam performance. </p>
 			<p><b>Email:</b> catalina.franco@snf.no</p>
