--- a/index.htm
+++ b/index.htm
@@ -154,7 +154,7 @@
 			<div class="collapse abs-padding" id="abs5">Previous literature documents gender differences in high-stakes exam performance. It has been suggested that these differences may be partly due to women "choking" under pressure. However, no causal evidence conclusively shows that choking under pressure causes underperformance in high-stakes settings, or that women are more affected than men. To address this gap, we designed an experiment to test whether women face a gender-specific penalty when performing under pressure. Over 2,600 online participants completed two IQ tests. In the first, stakes were constant across all groups. In the second test, we varied pressure levels by introducing a performance cutoff and, in one treatment group, significantly increasing the stakes. We also conducted a survey providing novel and detailed information on typical earnings on the Prolific platform, confirming that the increase in incentives was substantial compared to standard rewards for these online workers. Our results show that increasing pressure does not significantly affect overall performance, nor does it differentially impact women. However, an exploratory analysis reveals that the large incentives reduce performance among female test takers who may be ``at risk" of choking: women who performed well in the first test and accurately believed so. Our findings suggest that understanding how high-performing women respond to pressure may be a key step in closing the gender gap in examinations. <br/></div>
 
 			<div>
-				<p><b>Stress, The Value of a Signal: Information Processing among Students Outside the Lab </b></p>
+				<p><b>The Value of a Signal: Information Processing among Students Outside the Lab </b></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
 				</p>
@@ -173,6 +173,11 @@
 			<p><b>Encouraging Women Leadership: Evidence from Village Savings and Loans Associations in Uganda</b>
 				<br><i>(with Kjetil Bjorvatn, Shyamal Chowdhury, Danila Serra and Munshi Sulaiman)</i></p>
 
+				<div>
+			<p><b>Mentors for Minority Language Students</b>
+				<br><i>(with Astrid Ervik, Julian Johnsen and Kjell Salvanes)</i></p>
+			</div>
+					
 				<div>
 			<p><b>Getting Employers to Hire Workers in Inclusion Policies through Nudges and Motivation</b>
 				<br><i>(with Kjetil Bjorvatn, Mathias Ekström and Ranveig Falch)</i></p>
